# zedelivery-backend-challenge

./: .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml  partners.json
migrations/: 20230803205214_createpartner.sql
src/: cli.rs  handler.rs  main.rs  models.rs  route.rs  server.rs
